--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="catalog__list">
             <li class="catalog__item">
                 <div class="catalog__item-img">
-                    <img src="/img/boots.png" alt="Ботинки" class="catalog__pic">
+                    <img src="img/boots.png" alt="Ботинки" class="catalog__pic">
                 </div>
                 <div class="catalog__desc">
                     <div class="catalog__desc-title">
@@ -32,7 +32,7 @@
                             </div>
                             <div class="catalog__btn">
                                 <div class="catalog__btn-img">
-                                    <img src="/img/shopping-cart_icon-icons.com_72552.svg" alt="basket" class="catalog__btn-pic">
+                                    <img src="img/shopping-cart_icon-icons.com_72552.svg" alt="basket" class="catalog__btn-pic">
                                 </div>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
             </li>
             <li class="catalog__item">
                 <div class="catalog__item-img">
-                    <img src="/img/boots.png" alt="Ботинки" class="catalog__pic">
+                    <img src="img/boots.png" alt="Ботинки" class="catalog__pic">
                 </div>
                 <div class="catalog__desc">
                     <div class="catalog__desc-title">
@@ -60,7 +60,7 @@
                             </div>
                             <div class="catalog__btn">
                                 <div class="catalog__btn-img">
-                                    <img src="/img/shopping-cart_icon-icons.com_72552.svg" alt="basket" class="catalog__btn-pic">
+                                    <img src="img/shopping-cart_icon-icons.com_72552.svg" alt="basket" class="catalog__btn-pic">
                                 </div>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
             </li>
             <li class="catalog__item">
                     <div class="catalog__item-img">
-                        <img src="/img/boots.png" alt="Ботинки" class="catalog__pic">
+                        <img src="img/boots.png" alt="Ботинки" class="catalog__pic">
                     </div>
                     <div class="catalog__desc">
                         <div class="catalog__desc-title">
@@ -88,7 +88,7 @@
                                 </div>
                                 <div class="catalog__btn">
                                     <div class="catalog__btn-img">
-                                        <img src="/img/shopping-cart_icon-icons.com_72552.svg" alt="basket" class="catalog__btn-pic">
+                                        <img src="img/shopping-cart_icon-icons.com_72552.svg" alt="basket" class="catalog__btn-pic">
                                     </div>
                                 </div>
                             </div>
